--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bcrypt": "^5.1.0",
     "busboy": "^1.6.0",
     "cloudinary": "^1.37.0",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
